--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-auth-mongoose-boilerplate",
+  "name": "jobifyAPI",
   "version": "1.0.0",
   "description": "Auth boilerplate for mongoose express using token auth",
   "main": "server.js",
@@ -7,7 +7,7 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Timm Schoenborn",
+  "author": "John Arocha",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
